--- a/projetos.html
+++ b/projetos.html
@@ -24,7 +24,7 @@
         <h2>veja mais abaixo</h2>
         <div>
           <a id="botao1" href="https://gustavononnemmacher.github.io/gustavononnemmacherr.github.io/">Projeto-1</a>
-          <a id="botao1" href="">Portfólio</a>
+          <a id="botao1" href="https://gustavononnemmacher.github.io/gustavononnemmachher.github.io/">Portfólio</a>
         </div>
       </div>
   </section>
