--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main class="introducao">
     <img src="./img/foto.png" alt="foto Gustavo">
     <div>
-      <h1>Desenvolvedor <br> Front End & <br>UX/UI Designer</h1>
+      <h1>Técnico em informática,<br>cursando ADS<br></h1>
       <p>Localizado em Santa Catarina, Blumenau. 🍻</p>
     </div>
   </main>
