--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header class="header">
-    <img src="./img/gustavononnemmacher.svg" alt="marca">
+    <img src="./img/Gustavo.svg" alt="marca">
     <nav>
       <ul class="header-menu">
         <li><a id="botao" href="#experiencia"> experiência</a> </li>
@@ -31,7 +31,7 @@
   <main class="introducao">
     <img src="./img/foto.png" alt="foto Gustavo">
     <div>
-      <h1>Técnico em informática,<br>cursando ADS<br></h1>
+      <h1>Técnico em informática,<br>cursando ADS.<br></h1>
       <p>Localizado em Santa Catarina, Blumenau. 🍻</p>
     </div>
   </main>
@@ -120,7 +120,7 @@
     </div>
     </div>
   </section>
-  <footer class="rodape">
+  <footer class="rodape" id="contato" aria-label="contato">
     <div class="rodape-container">
       <div class="grid1">
         <p class="rodape-texto">Estou em busca de uma oportunidade
