--- a/projetos.html
+++ b/projetos.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header-bg">
     <div class="header-logo">
-      <a href="./index.html"><img src="./img/Gustavononnemmacherbranco.svg" alt=""></a>
+      <a href="./index.html"><img src="./img/Gustavo..svg" alt=""></a>
     </div>
   </header>
 
