--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div>
       <p class="experiencia-texto">Trabalhei diretamente no <strong>suporte</strong> de consumidores com problemas de acesso, pagamentos e Score.
-        Atualmente trabalho em um <a href="https://blog.contaazul.com/contadores/bpo-financeiro-como-comecar/#:~:text=implementar%20o%20servi%C3%A7o.-,O%20que%20significa%20BPO%20financeiro,%C3%A1reas%20administrativas%20para%20empresas%20terceiras."><strong>BPO</strong></a> na parte <strong>financeira</strong>, porém faço pequenos projetos de <strong>UI</strong> e <strong>UX</strong> e <strong>desenvolvimento web</strong>.
+        Atualmente trabalho em um <a href="https://blog.contaazul.com/contadores/bpo-financeiro-como-comecar/#:~:text=implementar%20o%20servi%C3%A7o.-,O%20que%20significa%20BPO%20financeiro,%C3%A1reas%20administrativas%20para%20empresas%20terceiras."><strong>BPO</strong></a> na parte <strong>financeira</strong>, porém faço pequenos projetos de <strong>desenvolvimento web</strong>.
       </p>
       <div class="empresa">
         <span class="empresa-ano">2023-08</span>
